More complex env file informations

--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,44 @@
-PORT=3210
-ADDRESS=localhost
+###########################################################################################
+## MODE
+# « inactive » for the scraper to one-shot some files
+# « active » for the scraper to stay alive within an http process to get the data from it
+###########################################################################################
+MODE=inactive
 
-MODE=dev
+###########################################################################################
+## ENVIRONMENT
+# « dev » - If in a dev environment
+# « prod » - If in a production environment
+###########################################################################################
+ENVIRONMENT=dev
 
-DB=json
+###########################################################################################
+## API
+# If api mode is on active, port and address to reach
+###########################################################################################
+API_PORT=3210
+API_ADDRESS=localhost
+
+###########################################################################################
+## DATA
+# Everything related to where and how to stock the data
+# DATA_METHOD allow you to choose to save data locally or not;
+# «local» - Choose a folder to stock the data and a format to the file, need to leave link empty
+# «distant» - Choose a link to target, as a REST API target, leave folder/format empty
+#
+# AS OF NOW, LOCAL IS THE ONLY METHOD SUPPORTED
+#
+###########################################################################################
+DATA_METHOD=local
+
+DATA_FOLDER=./data
+DATA_FORMAT=.json
+
+DATA_LINK=
+
+###########################################################################################
+# Where to find the data, here only for MTGO but soon more links
+# Actually only works for MTGO data
+###########################################################################################
+TARGETS="mtgo"
+TARGETS_BASE_LINK="https://magic.wizards.com/en/articles/archive/mtgo-standings/"
