--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^28.1.1"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.11",
     "dotenv": "^16.0.1",
     "node-fetch": "^2.6.7"
   }
