update the example env and details

--- a/.example.env
+++ b/.example.env
@@ -1,7 +1,8 @@
 ###########################################################################################
 ## MODE
-# « inactive » for the scraper to one-shot some files
+# « inactive » for the scraper to one-shot some files (app not running continuously)
 # « active » for the scraper to stay alive within an http process to get the data from it
+# In fact, it will managaes
 ###########################################################################################
 MODE=inactive
 
