--- a/.example.env
+++ b/.example.env
@@ -28,6 +28,7 @@ API_ADDRESS=localhost
 # «distant» - Choose a link to target, as a REST API target, leave folder/format empty
 #
 # AS OF NOW, LOCAL IS THE ONLY METHOD SUPPORTED
+# SOON SQL(SQLite)
 #
 ###########################################################################################
 DATA_METHOD=local
