--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.11",
     "dotenv": "^16.0.1",
+    "jsdom": "^19.0.0",
     "node-fetch": "^2.6.7"
   }
 }
