--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "jest": "^28.1.1"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cheerio": "^1.0.0-rc.11",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "jsdom": "^19.0.0",
     "node-fetch": "^2.6.7"
   }
