modified env example

--- a/.example.env
+++ b/.example.env
@@ -15,7 +15,7 @@ ENVIRONMENT=dev
 
 ###########################################################################################
 ## API
-# If api mode is on active, port and address to reach
+# If web-api mode is on active, port and address to reach
 ###########################################################################################
 API_PORT=3210
 API_ADDRESS=localhost
