--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "express": "^4.18.1",
     "helmet": "^5.1.0",
     "jsdom": "^19.0.0",
-    "node-fetch": "^2.6.7"
+    "knex": "^2.1.0",
+    "node-fetch": "^2.6.7",
+    "node-html-parser": "^5.3.3",
+    "sqlite3": "^5.0.8"
   }
 }
