added the possibility to add sql or json for data_format

--- a/.example.env
+++ b/.example.env
@@ -28,13 +28,13 @@ API_ADDRESS=localhost
 # «distant» - Choose a link to target, as a REST API target, leave folder/format empty
 #
 # AS OF NOW, LOCAL IS THE ONLY METHOD SUPPORTED
-# SOON SQL(SQLite)
 #
+# DATA_FORMAT could be either json or sql (Currently only using SQLite), which will change how the data is stored is the application
 ###########################################################################################
 DATA_METHOD=local
 
 DATA_FOLDER=./data
-DATA_FORMAT=.json
+DATA_FORMAT=sql
 
 DATA_LINK=
 
